--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
-        "typescript": "^5.5.4"
+        "typescript": "^4.9.5"
     },
     "scripts": {
         "start": "react-app-rewired start",
@@ -53,5 +53,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "packageManager": "yarn@4.12.0"
 }
